<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Workhour</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_time">TimeActivity</string>
	<string name="start">Start</string>
	<string name="stop">Stop</string>
	<string name="start_select">Select Start Time</string>
	<string name="stop_select">Select Stop Time</string>
	<string name="save">Save</string>
	<string name="location">Location</string>
	<string name="def">Default</string>
	<string-array name="location_values">
	    <item>default</item>
	</string-array>
</resources>